# bredis

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  build.rs  load_test.py
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: rust.yml
src/: cli.rs  database.rs  errors.rs  info.rs  main.rs
src/http_server/: core.rs  info.rs  mod.rs  models.rs
src/http_server/queries/: service.rs  tests.rs
src/server/: core.rs  docs.rs  info.rs  mod.rs  models.rs  query.rs  server.rs
src/server/queries/: service.rs  tests.rs
src/storages/: bredis.rs  mod.rs  rocksdb.rs  storage.rs  surrealkv.rs  tests.rs  value.rs
