[package]
name = "bredis"
authors = ["Vadim Suharnikov <vsuharnikov[AT]gmail.com>"]
version = "0.5.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.5.1", features = ["rustls"] }
clap = { version = "4.5.4", features = ["string", "cargo"] }
env_logger = "0.11.3"
rocksdb = { version = "0.22.0", features = ["multi-threaded-cf"] }
serde = { version = "1.0.197", features = ["serde_derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
rand = "0.8.5"
bincode = "1.3.3"
chrono = "0.4.38"

[build-dependencies]
anyhow = "1.0.82"
vergen = { version = "8.3.1", features = [
    "build",
    "cargo",
    "git",
    "gitcl",
    "rustc",
    "si",
] }
