[package]
name = "bredis"
description = "Bredis is a simple Redish clone written in Rust."
authors = ["Vadim Suharnikov <vsuharnikov[AT]gmail.com>"]
repository = "https://github.com/vadim-su/bredis"
license = "MIT"
keywords = ["redis", "clone", "database", "server", "actix-web", "rocksdb"]
categories = ["database", "network-programming"]
version = "0.8.0"
edition = "2021"

build = "build.rs"


[dependencies]
actix-web = { version = "4.9.0", features = ["rustls"] }
clap = { version = "4.5.26", features = ["string", "cargo"] }
env_logger = "0.11.6"
rocksdb = { version = "0.23.0", features = [
    "multi-threaded-cf",
], git = "https://github.com/rust-rocksdb/rust-rocksdb.git" }
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.134"
tokio = { version = "1.43.0", features = ["full"] }
rand = "0.8.5"
bincode = "1.3.3"
chrono = "0.4.39"
utoipa = { version = "5.3.1", features = ["actix_extras"] }
utoipa-swagger-ui = { version = "8.1.1", features = ["actix-web"] }
utoipa-redoc = { version = "5.0.1", features = ["actix-web"] }
log = "0.4.22"
surrealkv = "0.7.0"
futures = "0.3.31"
async-trait = "0.1.85"


[build-dependencies]
anyhow = "1.0.82"
vergen = { version = "9.0.3", features = ["build", "cargo", "rustc", "si"] }

[dev-dependencies]
clippy = "0.0.302"
rstest = "0.24.0"
rstest_reuse = "0.7.0"
